fix(yalb-1263): update wrapped-image-max to 1100px

--- a/components/02-molecules/wrapped-image/_yds-wrapped-image.scss
+++ b/components/02-molecules/wrapped-image/_yds-wrapped-image.scss
@@ -1,6 +1,6 @@
 @use '../../00-tokens/tokens';
 
-$wrapped-image-max: '992px';
+$wrapped-image-max: '1100px';
 
 .wrapped-image {
   @include tokens.spacing-page-inner;
